fixed: function setCurrentBank; constant variables names in uppercase; config file moved; from function setBank removed switch; all strings concatenation used with template; function playSound became readable; all functions except components refactored to "arrow functions"; folder "img" renamed to "images";

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,19 +5,18 @@ $pad-size: 90px;
 
 html {
   position: relative;
-}
-html::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("./img/pexels-maurício-mascaro-801863.jpg");
-  background-size: cover;
-  filter: hue-rotate(150deg);
-  // background-position-x: 300px;
-  background-position-y: -800px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/pexels-maurício-mascaro-801863.jpg");
+    background-size: cover;
+    filter: hue-rotate(150deg);
+    background-position-y: -800px;
+  }
 }
 .machine-wrapper {
   position: relative;
@@ -28,8 +27,6 @@ html::before {
   height: 98.3vh;
 }
 #drum-machine {
-  // background-color: #2d3436;
-  // background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   background-image: linear-gradient(315deg, #1b1b1bfa 0%, #2a2e30f6 74%);
   padding: 30px 40px;
   border-radius: 20px;
@@ -145,8 +142,6 @@ html::before {
     }
 
     .button {
-      // padding: 10px 18px;
-      // border: 1px solid black;
       background: linear-gradient(
         180deg,
         #d0d8d0f2 0%,
